test/data/invalid-messages/bad-boolean.message
## a message with an invalid boolean value

## VALID_HEADER includes a LENGTH Header and LENGTH Body
VALID_HEADER method_call

FIELD_NAME ifce
TYPE STRING
STRING 'org.freedesktop.Foo'
FIELD_NAME mebr
TYPE STRING
STRING 'Bar'

ALIGN 8
END_LENGTH Header
START_LENGTH Body
TYPE BOOLEAN
BYTE 3
END_LENGTH Body
